# xagtdep

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LLVM_INTEGRATION.md  README.md
doc/: SPEC.md
include/: DavioDecomposition.h  Function.h  NewMethod.h  QC.h  XAG.h  XagContext.h
src/DavioDecomposition/: CMakeLists.txt  DavioDecomposition.cpp  DavioDecomposition.h
src/Function/: CMakeLists.txt  Function.cpp
src/NewMethod/: CMakeLists.txt  NewMethod.cpp
src/QC/: CMakeLists.txt  QC.cpp
src/XAG/: CMakeLists.txt  XAG.cpp
test/: CMakeLists.txt  DavioDecompositionTest.cpp  FunctionTest.cpp  NewMethodTest.cpp  QCTest.cpp  XAGTest.cpp  run_passes.sh
